@@ -1,3 +1,6 @@
+-- V.22 -- 05/10/2025 --
+Mobile support for icons on the home page
+
 -- V.21 -- 05/10/2025 --
 Home page conversion to Starfield
     Floating orbs for homepage add some fun to it.
